fixed an unclear html element

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<form class="user">
-	<label for="userInput">Type your own Bio! Click on an element you want to change!</label>
+	<label for="userInput">Type your own Bio! Click on a bio you want to change!</label>
 	<input type="text" name="userInput" id = "userInput">
 	</form>
 	<div id = "outputEl">
